Update datamodel to version 0.3.0